tidied animation on homepage; added blue to case study blocks; removed scroll bug on mobile; new logo for nav; new nav on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -117,9 +117,11 @@ nav {
 	align-items: center;
 	background: $main-transparent;
 	.logo a {
+		font-family: $heading-font;
 		font-weight: 700;
 		font-size: 1.5rem;
 		color: $white;
+		text-transform: uppercase;
 	}
 	.logo a:hover {
 		text-decoration: none;
@@ -127,6 +129,7 @@ nav {
 	}
 
 	.nav-list {
+		font-family: $font-style;
 		ul {
 			margin: 0;
 			padding: 0;
@@ -144,12 +147,13 @@ nav {
 					&:hover {
 					}
 				}
+
 				ul {
 					background: $white;
 
 					box-shadow: 0 0 2px 0 $dark-transparent;
 					padding: 1rem 1rem 1.5rem;
-					margin: 0.5rem -1rem 0;
+					margin: 1rem 0 0 -1rem;
 					position: absolute;
 					display: none;
 					li {
@@ -165,6 +169,17 @@ nav {
 						}
 						a.sublink:hover {
 							color: $tertiary;
+						}
+					}
+				}
+				@media only screen and (max-width: 600px) {
+					ul {
+						width: 100%;
+
+						left: 0;
+						margin: 0;
+						li {
+							text-align: center;
 						}
 					}
 				}
